Got details page to wrok, and return to blog index, need to fix nav bar on colored pages that were made to get a hang of css color

--- a/Views/Blog/Details.cshtml
+++ b/Views/Blog/Details.cshtml
@@ -1,5 +1,8 @@
 @model MyMvcApp.Models.BlogPost
 
 <h2>@Model.Title</h2>
-<p>@Model.DatePublished.ToString("MMMM dd, yyyy")</p>
+<p><strong>Published on:</strong> @Model.DatePublished.ToString("MMMM dd, yyyy")</p>
 <p>@Model.Content</p>
+
+<a asp-action="Index" a>Back to Posts</a>
+
