--- a/Views/Blog/Index.cshtml
+++ b/Views/Blog/Index.cshtml
@@ -8,6 +8,6 @@
     <div>
         <h3>@post.Title</h3>
         <p>@post.DatePublished.ToString("MMMM dd, yyyy")</p>
-        <a href="/Blog/Details/@post.Id">Read More</a>
+        <a asp-action="Details" asp-route-id="@post.Id">Read More</a>
     </div>
 }
