--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,3 +1,5 @@
 @* Views/Home/Index.cshtml *@
-<h1>Welcome to My Blog</h1>
-<p>This is the homepage for your blog website.</p>
+<div class="lavender-background">
+    <h1>Welcome to My Blog</h1>
+    <p>This is the homepage for your blog website.</p>
+</div>
